--- a/package.json
+++ b/package.json
@@ -11,13 +11,17 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.9",
+    "@web3forms/react": "^1.1.3",
     "autoprefixer": "^10.4.20",
     "axios": "^1.8.1",
     "date-fns": "^4.1.0",
     "firebase": "^11.3.1",
+    "lucide-react": "^0.522.0",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.58.1",
+    "react-hot-toast": "^2.5.2",
     "react-router-dom": "^7.2.0",
     "react-toastify": "^11.0.5",
     "tailwindcss": "^4.0.9"
